--- a/sites/all/themes/the208wrapshop/css/custom.css
+++ b/sites/all/themes/the208wrapshop/css/custom.css
@@ -1,2 +1,56 @@
 .logo img {
   width: 254px; }
+
+header {
+  height: 625px; }
+
+header.container-fluid {
+  padding-left: 0;
+  padding-right: 0; }
+  header.container-fluid .container-fluid {
+    padding-left: 0;
+    padding-right: 0; }
+  header.container-fluid .navbar-collapse {
+    padding: 0; }
+
+#block-block-6 {
+  float: right;
+  background: rgba(59, 59, 59, 0.95);
+  width: 25%;
+  min-height: 175px; }
+
+.navbar-container {
+  width: 100%;
+  background: #212121;
+  clear: both;
+  float: left; }
+
+nav ul.navbar-nav {
+  margin-left: 5%; }
+  nav ul.navbar-nav li a {
+    background-color: inherit !important;
+    text-transform: uppercase;
+    color: white !important;
+    padding: 25px 30px;
+    font: bold 21px/30px Lato, Arial, sans-serif;
+    border-left: 1px solid #424242;
+    transition: all 0.3s ease; }
+  nav ul.navbar-nav li:hover {
+    background: #73b711; }
+  nav ul.navbar-nav li.active {
+    background: #73b711; }
+  nav ul.navbar-nav li.last a {
+    border-right: 1px solid #424242 !important; }
+nav .header-address {
+  padding-left: 29px;
+  color: white;
+  margin-top: 42px;
+  text-transform: uppercase;
+  font: 15px/26px Lato, Arial, sans-serif; }
+nav .header-phone {
+  padding-bottom: 50px;
+  font: bold 27px/37px Lato, Arial, sans-serif;
+  color: #73b711;
+  margin-top: 4px;
+  text-transform: uppercase;
+  padding-left: 29px; }
