--- a/sites/all/themes/the208wrapshop/css/sass/custom.scss
+++ b/sites/all/themes/the208wrapshop/css/sass/custom.scss
@@ -48,10 +48,10 @@ nav {
       }
     }
     li:hover {
-      background: rgb(115, 183, 17);
+      background: rgb(226, 0, 2);
     }
     li.active {
-      background: rgb(115, 183, 17);
+      background: rgb(226, 0, 2);
     }
     li.last {
       a {
@@ -69,7 +69,7 @@ nav {
   .header-phone {
     padding-bottom: 50px;
     font: bold 27px/37px Lato, Arial, sans-serif;
-    color: rgb(115, 183, 17);
+    color: #8E0000;
     margin-top: 4px;
     text-transform: uppercase;
     padding-left: 29px;
