--- a/sites/all/themes/the208wrapshop/css/sass/custom.scss
+++ b/sites/all/themes/the208wrapshop/css/sass/custom.scss
@@ -69,7 +69,7 @@ nav {
   .header-phone {
     padding-bottom: 50px;
     font: bold 27px/37px Lato, Arial, sans-serif;
-    color: #8E0000;
+    color: #FB0001;
     margin-top: 4px;
     text-transform: uppercase;
     padding-left: 29px;
