--- a/sites/all/themes/the208wrapshop/css/sass/custom.scss
+++ b/sites/all/themes/the208wrapshop/css/sass/custom.scss
@@ -1,13 +1,24 @@
 body {
-  //display:none;
 }
 
 .logo img {
   width: 254px;
 }
-header {
-  height: 625px;
+
+.main-container {
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+  z-index: 0;
 }
+
+header#navbar {
+  height: 625px;
+  margin-bottom: 0;
+  border: 0;
+  z-index: 1;
+}
+
 header.container-fluid {
   padding-left: 0;
   padding-right: 0;
@@ -20,9 +31,13 @@ header.container-fluid {
   }
 }
 
+.front .alert {
+  display: none;
+}
+
 #block-block-6 {
   float: right;
-  background: rgba(59,59,59, .95);
+  background: rgba(59, 59, 59, .95);
   width: 25%;
   min-height: 175px;
 }
@@ -33,6 +48,7 @@ header.container-fluid {
   clear: both;
   float: left;
 }
+
 nav {
   ul.navbar-nav {
     margin-left: 5%;
@@ -75,3 +91,351 @@ nav {
     padding-left: 29px;
   }
 }
+
+.read-more-button {
+  display: inline-block;
+  margin-top: 33px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  padding: 20px 29px;
+  font: bold 21px/30px Lato, Arial, sans-serif;
+  background: #FB0001;
+  transition: all 0.4s ease;
+}
+
+.read-more-button:hover {
+  color: #FB0001;
+  background: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+#block-views-projects-home-block-block {
+  background-color: #212121;
+  color: white;
+  padding-top: 50px;
+  min-height: 550px;
+  position: relative;
+
+  .view-footer {
+    position: absolute;
+    bottom: -10px;
+  }
+  .views-field-title {
+    a {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: white;
+      font-size: 30px;
+      text-transform: uppercase;
+      padding-bottom: 20px;
+    }
+    a:hover {
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
+
+#block-block-8 {
+  position: relative;
+  background-color: #FB0001;
+  color: white;
+  padding-top: 50px;
+  min-height: 550px;
+  .read-more-button {
+    background: #212121;
+    color: white;
+    position: absolute;
+    left: 0;
+    bottom: 60px;
+  }
+  .read-more-button:hover {
+    background: black;
+    color: #FB0001;
+  }
+  h2 {
+    margin-top: 0;
+    text-transform: uppercase;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+}
+
+.navbar-nav > li > .dropdown-menu {
+  background: rgb(53, 53, 53);
+  z-index: 9999;
+}
+
+.navbar-nav > li > .dropdown-menu a {
+  font: 15px/41px Lato, Arial, sans-serif;
+  padding: 4px 10px 0 0;
+  text-transform: capitalize;
+  line-height: 30px;
+  text-indent: 30px;
+  margin-bottom: -5px;
+  transition: all 0.3s ease;
+
+}
+
+#block-views-services-home-page-left-block {
+  background: #EDEDED;
+}
+
+.services-right-1 {
+  background: #4A4A4A;
+}
+
+.services-right-2 {
+  background: #353535;
+}
+
+.services-right-3 {
+  background: #212121;
+}
+
+.services-right-4 {
+  background: #000000;
+}
+
+#block-views-services-home-page-right-block {
+  padding-left: 0;
+  padding-right: 0;
+  .views-row {
+    padding: 57px 15px;
+    width: 100%;
+    float: left;
+    clear: both;
+    a {
+      color: white;
+      text-decoration: none;
+      transition: all 0.4s ease;
+      font: 30px/36px Lato, Arial, sans-serif;
+    }
+    a:hover {
+      color: #FB0001;
+    }
+  }
+  .views-field {
+    float: left;
+  }
+  .views-field:first-of-type {
+    width: 65px;
+    text-align: center;
+    padding-right: 10px;
+  }
+  .views-field-title {
+    max-width: 230px;
+    text-transform: uppercase;
+  }
+  i {
+    text-align: center;
+    font-size: 48px;
+    color: #FB0001;
+  }
+}
+
+.view-services-home-page-left {
+  padding: 40px 30px;
+  font: 18px/36px Lato, Arial, sans-serif;
+  color: #212121;
+  text-transform: uppercase;
+  min-height: 733px;
+  .view-header {
+    font: 24px/36px Lato, Arial, sans-serif;
+    font-weight: bold;
+  }
+  .views-field-title {
+    font: 17px/26px Lato, Arial, sans-serif;
+  }
+  .views-row {
+    float: left;
+    width: 50%;
+    padding: 10px 0;
+    position: relative;
+    a {
+      color: #212121;
+      transition: all 0.4s ease;
+    }
+    a:hover {
+      color: #FB0001;
+      text-decoration: none;
+    }
+  }
+  .views-row:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 1px;
+    border-bottom: 1px solid grey;
+    width: 95%;
+  }
+  .views-row:nth-last-child(2):before {
+    border-bottom: none;
+  }
+  .views-row-last:before {
+    border-bottom: none;
+  }
+}
+
+#block-block-9 {
+  clear: both;
+  position: relative;
+  top: -1px;
+}
+
+.parallax-container {
+  float: right;
+  background: rgba(0, 0, 0, .7);
+  min-height: 460px;
+  color: #fff;
+  position: relative;
+  h3 {
+    font: 30px/36px Lato, Arial, sans-serif;
+    text-transform: uppercase;
+  }
+  .parallax-content {
+    div {
+      font: 15px/26px Lato, Arial, sans-serif;
+    }
+    a.read-more-button {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
+  }
+}
+
+.parallax-scroll {
+  position: absolute;
+}
+
+#block-block-10 {
+  padding: 0;
+  position: relative;
+  top: -1px;
+
+  iframe {
+    width: 100%;
+    min-height: 325px;
+    display: block;
+  }
+}
+
+#block-block-11 {
+  background-color: #FB0001;
+  padding: 0;
+  top: -1px;
+  position: relative;
+  color: white;
+  height: 325px;
+  .maps-contact-container {
+    padding: 25px;
+  }
+  h3 {
+    font: bold 38px/47px Lato, Arial, sans-serif;
+  }
+  .maps-address {
+    text-transform: uppercase;
+    font: bold 21px/34px Lato, Arial, sans-serif;
+  }
+  .maps-contact-blurb {
+    margin-top: 20px;
+    padding-bottom: 25px;
+  }
+}
+
+footer.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+  h3 {
+    text-transform: uppercase;
+    font: bold 21px/24px Lato, Arial, sans-serif;
+    color: white;
+  }
+}
+
+#block-block-12 {
+  padding: 0;
+  background: #212121;
+  top: -1px;
+  min-height: 315px;
+  position: relative;
+  .footer-left-container {
+    padding: 40px;
+  }
+  .foot-block {
+    float: left;
+    color: rgb(136, 136, 136);
+    font: 15px/26px Lato, Arial, sans-serif;
+
+  }
+  a {
+    transition: all 0.4s ease;
+    color: rgb(136, 136, 136);
+  }
+  a:hover {
+    text-decoration: none;
+    color: #FB0001;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    text-transform: uppercase
+  }
+  .footer-contact {
+    padding-right: 0;
+  }
+}
+
+#block-block-13 {
+  padding: 0;
+  background: #353535;
+  top: -1px;
+  position: relative;
+  min-height: 315px;
+  .footer-right-container {
+    padding: 40px;
+  }
+  .footer-follow {
+    i {
+      font-size: 45px;
+    }
+    a {
+      color: white;
+      background: #212121;
+      padding: 12px;
+      display: block;
+      float: left;
+      margin-right: 10px;
+      width: 70px;
+      text-align: center;
+    }
+    a:hover {
+      background: #FB0001;
+      text-decoration: none;
+    }
+  }
+  .footer-right-text {
+    color: rgb(136, 136, 136);
+    clear: both;
+    padding-top: 24px;
+    font: 12px/22px Lato, Arial, sans-serif;
+  }
+}
+
+#block-block-14 {
+  background: #000;
+  padding: 25px;
+  font-size: 12px;
+  color: #888;
+  position:relative;
+  top: -1px;
+  a {
+    color: #FB0001;
+  }
+  a:hover {
+    color: #FB0001;
+    text-decoration: none;
+  }
+}
+*, *::before, *::after {outline: 2px solid hotpink;}
