--- a/sites/all/themes/the208wrapshop/css/custom.css
+++ b/sites/all/themes/the208wrapshop/css/custom.css
@@ -1,8 +1,17 @@
 .logo img {
   width: 254px; }
 
-header {
-  height: 625px; }
+.main-container {
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+  z-index: 0; }
+
+header#navbar {
+  height: 625px;
+  margin-bottom: 0;
+  border: 0;
+  z-index: 1; }
 
 header.container-fluid {
   padding-left: 0;
@@ -12,6 +21,9 @@ header.container-fluid {
     padding-right: 0; }
   header.container-fluid .navbar-collapse {
     padding: 0; }
+
+.front .alert {
+  display: none; }
 
 #block-block-6 {
   float: right;
@@ -54,3 +66,275 @@ nav .header-phone {
   margin-top: 4px;
   text-transform: uppercase;
   padding-left: 29px; }
+
+.read-more-button {
+  display: inline-block;
+  margin-top: 33px;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  padding: 20px 29px;
+  font: bold 21px/30px Lato, Arial, sans-serif;
+  background: #FB0001;
+  transition: all 0.4s ease; }
+
+.read-more-button:hover {
+  color: #FB0001;
+  background: white;
+  text-decoration: none; }
+
+#block-views-projects-home-block-block {
+  background-color: #212121;
+  color: white;
+  padding-top: 50px;
+  min-height: 550px;
+  position: relative; }
+  #block-views-projects-home-block-block .view-footer {
+    position: absolute;
+    bottom: -10px; }
+  #block-views-projects-home-block-block .views-field-title a {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: white;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding-bottom: 20px; }
+  #block-views-projects-home-block-block .views-field-title a:hover {
+    color: white;
+    text-decoration: none; }
+
+#block-block-8 {
+  position: relative;
+  background-color: #FB0001;
+  color: white;
+  padding-top: 50px;
+  min-height: 550px; }
+  #block-block-8 .read-more-button {
+    background: #212121;
+    color: white;
+    position: absolute;
+    left: 0;
+    bottom: 60px; }
+  #block-block-8 .read-more-button:hover {
+    background: black;
+    color: #FB0001; }
+  #block-block-8 h2 {
+    margin-top: 0;
+    text-transform: uppercase;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+.navbar-nav > li > .dropdown-menu {
+  background: #353535;
+  z-index: 9999; }
+
+.navbar-nav > li > .dropdown-menu a {
+  font: 15px/41px Lato, Arial, sans-serif;
+  padding: 4px 10px 0 0;
+  text-transform: capitalize;
+  line-height: 30px;
+  text-indent: 30px;
+  margin-bottom: -5px;
+  transition: all 0.3s ease; }
+
+#block-views-services-home-page-left-block {
+  background: #EDEDED; }
+
+.services-right-1 {
+  background: #4A4A4A; }
+
+.services-right-2 {
+  background: #353535; }
+
+.services-right-3 {
+  background: #212121; }
+
+.services-right-4 {
+  background: #000000; }
+
+#block-views-services-home-page-right-block {
+  padding-left: 0;
+  padding-right: 0; }
+  #block-views-services-home-page-right-block .views-row {
+    padding: 57px 15px;
+    width: 100%;
+    float: left;
+    clear: both; }
+    #block-views-services-home-page-right-block .views-row a {
+      color: white;
+      text-decoration: none;
+      transition: all 0.4s ease;
+      font: 30px/36px Lato, Arial, sans-serif; }
+    #block-views-services-home-page-right-block .views-row a:hover {
+      color: #FB0001; }
+  #block-views-services-home-page-right-block .views-field {
+    float: left; }
+  #block-views-services-home-page-right-block .views-field:first-of-type {
+    width: 65px;
+    text-align: center;
+    padding-right: 10px; }
+  #block-views-services-home-page-right-block .views-field-title {
+    max-width: 230px;
+    text-transform: uppercase; }
+  #block-views-services-home-page-right-block i {
+    text-align: center;
+    font-size: 48px;
+    color: #FB0001; }
+
+.view-services-home-page-left {
+  padding: 40px 30px;
+  font: 18px/36px Lato, Arial, sans-serif;
+  color: #212121;
+  text-transform: uppercase;
+  min-height: 733px; }
+  .view-services-home-page-left .view-header {
+    font: 24px/36px Lato, Arial, sans-serif;
+    font-weight: bold; }
+  .view-services-home-page-left .views-field-title {
+    font: 17px/26px Lato, Arial, sans-serif; }
+  .view-services-home-page-left .views-row {
+    float: left;
+    width: 50%;
+    padding: 10px 0;
+    position: relative; }
+    .view-services-home-page-left .views-row a {
+      color: #212121;
+      transition: all 0.4s ease; }
+    .view-services-home-page-left .views-row a:hover {
+      color: #FB0001;
+      text-decoration: none; }
+  .view-services-home-page-left .views-row:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 1px;
+    border-bottom: 1px solid grey;
+    width: 95%; }
+  .view-services-home-page-left .views-row:nth-last-child(2):before {
+    border-bottom: none; }
+  .view-services-home-page-left .views-row-last:before {
+    border-bottom: none; }
+
+#block-block-9 {
+  clear: both;
+  position: relative;
+  top: -1px; }
+
+.parallax-container {
+  float: right;
+  background: rgba(0, 0, 0, 0.7);
+  min-height: 460px;
+  color: #fff;
+  position: relative; }
+  .parallax-container h3 {
+    font: 30px/36px Lato, Arial, sans-serif;
+    text-transform: uppercase; }
+  .parallax-container .parallax-content div {
+    font: 15px/26px Lato, Arial, sans-serif; }
+  .parallax-container .parallax-content a.read-more-button {
+    position: absolute;
+    left: 0;
+    bottom: 0; }
+
+.parallax-scroll {
+  position: absolute; }
+
+#block-block-10 {
+  padding: 0;
+  position: relative;
+  top: -1px; }
+  #block-block-10 iframe {
+    width: 100%;
+    min-height: 325px;
+    display: block; }
+
+#block-block-11 {
+  background-color: #FB0001;
+  padding: 0;
+  top: -1px;
+  position: relative;
+  color: white;
+  height: 325px; }
+  #block-block-11 .maps-contact-container {
+    padding: 25px; }
+  #block-block-11 h3 {
+    font: bold 38px/47px Lato, Arial, sans-serif; }
+  #block-block-11 .maps-address {
+    text-transform: uppercase;
+    font: bold 21px/34px Lato, Arial, sans-serif; }
+  #block-block-11 .maps-contact-blurb {
+    margin-top: 20px;
+    padding-bottom: 25px; }
+
+footer.container-fluid {
+  padding-left: 0;
+  padding-right: 0; }
+  footer.container-fluid h3 {
+    text-transform: uppercase;
+    font: bold 21px/24px Lato, Arial, sans-serif;
+    color: white; }
+
+#block-block-12 {
+  padding: 0;
+  background: #212121;
+  top: -1px;
+  min-height: 315px;
+  position: relative; }
+  #block-block-12 .footer-left-container {
+    padding: 40px; }
+  #block-block-12 .foot-block {
+    float: left;
+    color: #888888;
+    font: 15px/26px Lato, Arial, sans-serif; }
+  #block-block-12 a {
+    transition: all 0.4s ease;
+    color: #888888; }
+  #block-block-12 a:hover {
+    text-decoration: none;
+    color: #FB0001; }
+  #block-block-12 ul {
+    list-style: none;
+    padding: 0;
+    text-transform: uppercase; }
+  #block-block-12 .footer-contact {
+    padding-right: 0; }
+
+#block-block-13 {
+  padding: 0;
+  background: #353535;
+  top: -1px;
+  position: relative;
+  min-height: 315px; }
+  #block-block-13 .footer-right-container {
+    padding: 40px; }
+  #block-block-13 .footer-follow i {
+    font-size: 45px; }
+  #block-block-13 .footer-follow a {
+    color: white;
+    background: #212121;
+    padding: 12px;
+    display: block;
+    float: left;
+    margin-right: 10px;
+    width: 70px;
+    text-align: center; }
+  #block-block-13 .footer-follow a:hover {
+    background: #FB0001;
+    text-decoration: none; }
+  #block-block-13 .footer-right-text {
+    color: #888888;
+    clear: both;
+    padding-top: 24px;
+    font: 12px/22px Lato, Arial, sans-serif; }
+
+#block-block-14 {
+  background: #000;
+  padding: 25px;
+  font-size: 12px;
+  color: #888;
+  position: relative;
+  top: -1px; }
+  #block-block-14 a {
+    color: #FB0001; }
+  #block-block-14 a:hover {
+    color: #FB0001;
+    text-decoration: none; }
